ES-343: Fix text alignment in results

--- a/src/blocks/food-quiz/style.scss
+++ b/src/blocks/food-quiz/style.scss
@@ -239,7 +239,7 @@
 
 		.food-quiz__tier {
 			display: none;
-			text-align: unset;
+			text-align: left;
 
 			max-width: 736px;
 		}
